lang/lc/tests/err_attr_redef.expected.err
err_attr_redef.sys: In system `main':
err_attr_redef.sys:6: error: redefinition of `health(a)'
err_attr_redef.sys:5: error: `health(a)' previously defined here
