lang/lc/tests/err_attr_redef.sys
system main()
{
	bool a;

	attribute health(a) = true;
	attribute health(a) = false;
}
